name:           unittyped
version:        0.1
author:         Thijs Alkemade
license:        GPL
Cabal-Version:  >= 1.2
build-type:     Simple
synopsis:		A type-safe open-world library for computations including units.

library
  build-depends:   base == 4.6.0.0
  extensions:      FlexibleInstances, RankNTypes, MultiParamTypeClasses, ConstraintKinds, DataKinds, UndecidableInstances, FunctionalDependencies, KindSignatures, TypeFamilies, InstanceSigs, ScopedTypeVariables, FlexibleContexts, TypeOperators, OverlappingInstances, ImpredicativeTypes, GADTs
  exposed-modules: UnitTyped.Units, UnitTyped.SI, UnitTyped.SI.Meta, UnitTyped.SI.Derived, UnitTyped.SI.Constants, UnitTyped.Bytes, UnitTyped.Currency, UnitTyped.NoPrelude
  hs-source-dirs:  src
