name:           unittyped
version:        0.1
author:         Thijs Alkemade
license:        LGPL-2.1
license-file:   LICENSE
Cabal-Version:  >= 1.8
build-type:     Simple
synopsis:       An extendable library for type-safe computations including units.

library
  build-depends:   base >= 4.6 && < 4.7
  extensions:      FlexibleInstances,
                   DataKinds,
                   UndecidableInstances,
                   FunctionalDependencies,
                   KindSignatures,
                   ScopedTypeVariables,
                   FlexibleContexts,
                   OverlappingInstances,
                   GADTs,
                   EmptyDataDecls
  exposed-modules: UnitTyped,
                   UnitTyped.NoPrelude,
                   UnitTyped.SI,
                   UnitTyped.SI.Meta,
                   UnitTyped.SI.Constants,
                   UnitTyped.Bytes,
                   UnitTyped.Currency,
                   UnitTyped.SI.Derived,
                   UnitTyped.SI.Derived.Length,
                   UnitTyped.SI.Derived.Count,
                   UnitTyped.SI.Derived.Time,
                   UnitTyped.SI.Derived.Mass
  hs-source-dirs:  src

Test-Suite test-si
    type:          exitcode-stdio-1.0
    main-is:       tests/TestSI.hs
    build-depends: base >= 4.6 && < 4.7, unittyped
