name:           unittyped
version:        0.3
author:         Thijs Alkemade <thijsalkemade@gmail.com>
maintainer:     Thijs Alkemade <thijsalkemade@gmail.com>
copyright:      Copyright: (c) 2012 Thijs Alkemade
homepage:       https://bitbucket.org/xnyhps/haskell-unittyped/
bug-reports:    https://bitbucket.org/xnyhps/haskell-unittyped/issues/new
license:        LGPL-2.1
license-file:   LICENSE
category:       Physics, Math
stability:      experimental
Cabal-Version:  >= 1.8
build-type:     Simple
synopsis:       An extendable library for type-safe computations including units.
tested-with:    GHC == 7.6.1
description:    UnitTyped is a Haskell library that makes it possible to do computations on values with a dimension and a unit. The typechecker ensures that all operations are using the proper dimensions, and all units can be converted to compatible units automatically. New dimensions and units can be defined from other modules, requiring just a data type and one class instance to work with everything else. The library comes with all SI dimensions and units, and many units derived from those.

source-repository head
  type: hg
  location: https://bitbucket.org/xnyhps/haskell-unittyped

source-repository this
  type: hg
  location: https://bitbucket.org/xnyhps/haskell-unittyped
  tag: 0.2

library
  build-depends:   base >= 4.6 && < 4.7, vector >= 0.10, time, old-locale, containers
  extensions:      FlexibleInstances
                   UndecidableInstances
                   FunctionalDependencies
                   KindSignatures
                   ScopedTypeVariables
                   FlexibleContexts
                   OverlappingInstances
                   GADTs
                   EmptyDataDecls
                   TypeOperators
                   RankNTypes
                   DeriveDataTypeable            
  exposed-modules: UnitTyped
                   UnitTyped.Bytes
                   UnitTyped.NoPrelude
                   UnitTyped.SI
                   UnitTyped.SI.Derived
                   UnitTyped.SI.Derived.Time
                   UnitTyped.SI.Derived.Mass
                   UnitTyped.SI.Derived.Length
                   UnitTyped.SI.Derived.Count
                   UnitTyped.SI.Meta
                   UnitTyped.SI.Show
                   UnitTyped.SI.Constants
                   UnitTyped.Type
  hs-source-dirs:  src

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  HS-Source-Dirs:       tests
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.5
                      , unittyped

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       tests
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        SISpec
                      , UnboxSpec
                      , TypeableSpec
  Build-Depends:        base
                      , ghc
                      , hspec >= 1.3
                      , hspec-expectations >= 0.3
                      , QuickCheck
                      , repa >= 3.2.3
                      , unittyped
                      , vector >= 0.10

